--- a/Regression/Gradient Descent/from_scratch.ipynb
+++ b/Regression/Gradient Descent/from_scratch.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Algorithm: $\\theta_{j} := \\theta_{j} - \\alpha \\frac {\\partial J(\\theta)} {\\partial \\theta_{j}}$\n",
     "\n",
-    "$\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\theta_{j} := \\theta_{j} - \\frac{\\alpha}{m} (h_{\\theta}(x_{i}) - y_{i})^{2}$\n"
+    "$\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\theta_{j} := \\theta_{j} - \\frac{\\alpha}{m} (h_{\\theta}(x_{i}) - y_{i})$\n"
    ]
   },
   {
